tests/ui/errors/snapshots/parse_keyword_as_binding.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:2:27]
 1 │ 
 2 │ fn walk_dir(root: string, fn: string) {}
   ·                           ─┬
   ·                            ╰── cannot be used as a binding name
   ╰────
  help: Rename binding `fn` · code: [parse.keyword_as_binding]
