tests/ui/errors/snapshots/parse_keyword_as_binding_in_for_loop.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:4:7]
 3 │   let items = [1, 2, 3];
 4 │   for type in items {
   ·       ──┬─
   ·         ╰── cannot be used as a binding name
 5 │     items
   ╰────
  help: Rename this binding. `type` is a keyword reserved for declaring named types · code: [parse.keyword_as_binding]
