tests/ui/errors/snapshots/parse_keyword_as_binding_in_match.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:5:10]
 4 │   match x {
 5 │     Some(type) => 0,
   ·          ──┬─
   ·            ╰── cannot be used as a binding name
 6 │     None => 0,
   ╰────
  help: Rename this binding. `type` is a keyword reserved for declaring named types · code: [parse.keyword_as_binding]
