tests/ui/errors/snapshots/parse_keyword_as_binding_match_kw.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:3:7]
 2 │ fn main() {
 3 │   let match = 1
   ·       ──┬──
   ·         ╰── cannot be used as a binding name
 4 │ }
   ╰────
  help: Rename this binding. `match` is a keyword reserved for pattern matching · code: [parse.keyword_as_binding]
