tests/ui/errors/snapshots/parse_keyword_as_binding_recover.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:3:7]
 2 │ fn main() {
 3 │   let recover = 1
   ·       ───┬───
   ·          ╰── cannot be used as a binding name
 4 │ }
   ╰────
  help: Rename this binding. `recover` is a keyword reserved for catching panics · code: [parse.keyword_as_binding]
