tests/ui/errors/snapshots/parse_keyword_as_binding_task.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:3:7]
 2 │ fn main() {
 3 │   let task = || {}
   ·       ──┬─
   ·         ╰── cannot be used as a binding name
 4 │ }
   ╰────
  help: Rename this binding. `task` is a keyword reserved for spawning concurrent work · code: [parse.keyword_as_binding]
