tests/ui/errors/snapshots/parse_keyword_param_keeps_reserved_error.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved keyword
   ╭─[test.lis:2:6]
 1 │ 
 2 │ fn f(type: int) -> int {
   ·      ──┬─
   ·        ╰── cannot be used as a binding name
 3 │   1
   ╰────
  help: Rename this binding. `type` is a keyword reserved for declaring named types · code: [parse.keyword_as_binding]
